--- a/package.json
+++ b/package.json
@@ -2,22 +2,24 @@
   "name": "student-life",
   "version": "0.1.0",
   "private": true,
-  "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "NODE_ENV=production node server.js",
-    "lint": "next lint"
-  },
+"scripts": {
+  "dev": "next dev",
+ "build": "next build", 
+  "start": "node server.js",
+  "lint": "next lint"
+},
   "dependencies": {
     "@prisma/client": "^5.22.0",
     "@react-google-maps/api": "^2.20.8",
     "bcrypt": "^6.0.0",
     "bcryptjs": "^2.4.3",
     "framer-motion": "^12.23.26",
+    "html5-qrcode": "^2.3.8",
     "next": "16.1.1",
     "next-auth": "^4.24.13",
     "next-cloudinary": "^6.17.5",
     "nodemailer": "^7.0.12",
+    "qrcode.react": "^4.2.0",
     "react": "19.2.3",
     "react-dom": "19.2.3"
   },
